Smoke simulation crashes by clicking in the timeline #34783

Closed
opened 2013-03-27 11:16:59 +01:00 by Thomas Beck · 5 comments
Member

%%%Hi Miika,
as discussed previously, here is my crasher.

- Operating System, Graphics card ---

Win7, 6GB Ram, crappy intel, i5

- Blender version with error, and version that worked ---

Error: 55587

- Short description of error ---

As the title says: Blender crashes while clicking in the timeline

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Open the blend http://www.pasteall.org/blend/20389 and bake the smoke sim. Go to the materials tab and select the "smoke density". After that click in the timeline several times... Blender crashes

And as a second issue: The smoke density preview is not getting refreshed until I click on the timeline...when I use the arrow keys, it still stays the same until I click on the timeline - so I assume a refresh is only triggered on click and not on frame change..

Greetings, Thomas Beck

%%%

%%%Hi Miika, as discussed previously, here is my crasher. - Operating System, Graphics card --- Win7, 6GB Ram, crappy intel, i5 - Blender version with error, and version that worked --- Error: 55587 - Short description of error --- As the title says: Blender crashes while clicking in the timeline - Steps for others to reproduce the error (preferably based on attached .blend file) --- Open the blend http://www.pasteall.org/blend/20389 and bake the smoke sim. Go to the materials tab and select the "smoke density". After that click in the timeline several times... Blender crashes And as a second issue: The smoke density preview is not getting refreshed until I click on the timeline...when I use the arrow keys, it still stays the same until I click on the timeline - so I assume a refresh is only triggered on click and not on frame change.. Greetings, Thomas Beck %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%This seems to be related to material preview render going on in the other thread:

  1. Preview starts generating / rendering frame x in separate thread
  2. Scene frame is changed
  3. Smoke data gets changed (also volume resolution because of adaptive domain)
  4. Preview thread is still reading old memory pointer / data resolution -> Crash

It's better someone who knows how material preview code works takes a look at this.%%%

%%%This seems to be related to material preview render going on in the other thread: 1) Preview starts generating / rendering frame x in separate thread 2) Scene frame is changed 3) Smoke data gets changed (also volume resolution because of adaptive domain) 4) Preview thread is still reading old memory pointer / data resolution -> Crash It's better someone who knows how material preview code works takes a look at this.%%%

%%%This is somewhat complicated to fix. The problem is that in this case is an exception, usually preview render just involves materials and textures but here it's also using object data through the voxel data texture. This bug is probably as old as the volume rendering code.%%%

%%%This is somewhat complicated to fix. The problem is that in this case is an exception, usually preview render just involves materials and textures but here it's also using object data through the voxel data texture. This bug is probably as old as the volume rendering code.%%%

%%%Fix in svn, thanks for the report.%%%

%%%Fix in svn, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34783
No description provided.